@@ -7,10 +7,12 @@ DIST gentoo-headers-2.6.23-5.tar.bz2 8185 RMD160 5c2bb6deb7ab7c2180cc4395d8a56f2
 DIST gentoo-headers-2.6.27-2.tar.lzma 8548 RMD160 48c5b98a12a9830be7cfcc5f993807b51c6c5434 SHA1 d9052b14536693cd63b415a0f040ab1832801be9 SHA256 a6dcb5cd6e652d4b09a91ce1bba02ab8a9c4faf3341f0ea0295d9048063aa3be
 DIST gentoo-headers-2.6.28-2.tar.lzma 10175 RMD160 47e9cbd88265269b4b7f8ac35c19879b1e1dab07 SHA1 3895ce0fbd60a9f9720ee7cfeb769dbe2387e973 SHA256 03a06f9918eb4836a147a04d6d1f4728bf8f7a23e00ef28ef9396601303cc5c6
 DIST gentoo-headers-2.6.29-1.tar.lzma 9640 RMD160 2b13edcd80d1772c7e438678d20dd0b752b43832 SHA1 865b95ef6c87ac734c502a7519d30790f3a106bf SHA256 73f66116a67fc8fe28de407456dbfa0532929c5f2e8b8508fcb5b452875de3d8
+DIST gentoo-headers-2.6.30-1.tar.lzma 8587 RMD160 9376df788e0ae245e43a09a48e2c16b8c6cdf03a SHA1 86db6f77329c1d2053fb6b2a71d33144e1209c32 SHA256 d3f4882e796e0c45bf8989bef3b61bd7ba57099ebaec28698af93ed5baae895e
 DIST gentoo-headers-base-2.6.23.tar.bz2 4774654 RMD160 506b3cdad53025783fe7f9b30c9150828bdf53e9 SHA1 a00fe87cd741fd04ce49678da41341baa0b0e4cf SHA256 5bb816dceba5b6cb4829b25eb1e06af3c00b5a9f8eca1d6e711965d5020b78ab
 DIST gentoo-headers-base-2.6.27.tar.lzma 3584132 RMD160 824b540cfa897b6b63a22bc3179f29b15c66d835 SHA1 05d7e26b4bc0cf80481f289e8263834b202ec573 SHA256 c86343d77613555760871838608bdf08429e48f96e261039e206de4411546437
 DIST gentoo-headers-base-2.6.28.tar.lzma 3698033 RMD160 d37901dff6334482b582d843a4d293ce99d6d64c SHA1 1a12e7c2b71091f90c6af46f70a8393fb399b9cc SHA256 fc1d07a2a37a290589d71b2b48e1c5660b89a958d578d9fb5be8cbcc59fbfcd2
 DIST gentoo-headers-base-2.6.29.tar.lzma 3814923 RMD160 7b70d699c7ebbd0a59ecc27da7087be65de60c68 SHA1 30896450246761f6ee9ed89a16249b7b5b314da4 SHA256 b33b53075afdeb92e3e85d404d9b4d9e55e6665603cd58a0d42e1b3db4d52ab5
+DIST gentoo-headers-base-2.6.30.tar.lzma 3861176 RMD160 a43c85ceaadd9b06d8b50962a3e965bd5ce2a226 SHA1 aa1624d161c7c58ebdbde9d2e1a2695f45835c74 SHA256 8201ae0871b561a6c309d2be365204744a0412086c1b1664e748fd1338127f2f
 DIST linux-2.4.33.tar.bz2 31161078 RMD160 6acdabafecfdc69f3f5b0203eac154ac1c39c44b SHA1 ea444013d54ead1ed366180e9d18d52fbbbe5c6b SHA256 a1d8403a72dbe7a4d63986e71e22e6eeb32fe2e2e949f40c3f9f3bb6496ee47a
 DIST linux-2.4.36.tar.bz2 31105810 RMD160 edc378f091a676ddb271239a04dc58973c4077b7 SHA1 a767e2cc65a7aedc21a3a3d6a07a7709509c85e8 SHA256 c771c8e1db86eda01f047e4f23b48da748f31a82c9501e2c9af4b1acbee8a9e7
 DIST patch-2.4.33.3.bz2 6069 RMD160 dba22420a3c3445042f1193475718fdf4c5a6c3d SHA1 22f8493026ee1a191cae073cb94ee2b037ca575c SHA256 926223533c33791770a8ae134d731aa3f98b67a2b5676426ea74a1a888eb5a7b
@@ -20,12 +22,13 @@ EBUILD linux-headers-2.6.23-r3.ebuild 1082 RMD160 cdaade84c46000495b1a4919df41d9
 EBUILD linux-headers-2.6.27-r2.ebuild 1412 RMD160 fc2df75914d70e56110bcebbb3760a6801a6d995 SHA1 33322bad8aa714f5cc12939da6098a7a3fc378b0 SHA256 be69de0db756aad1094418273c0a45e5e2b8647ac2cd40e197acee0a7f44c2c7
 EBUILD linux-headers-2.6.28-r1.ebuild 1499 RMD160 8b0110c4b1946ad8945390d8b5ea1ee3f1bad000 SHA1 40b471714a3b51aeae5f4b19917b8f31c756adcd SHA256 13ca158ce92de5424969bd866cc1b508bbcdfd4661acf5f83dfd5a2d475f31a1
 EBUILD linux-headers-2.6.29.ebuild 1429 RMD160 838f6d0b14da4ac6e51b70b707cba85ec318b2c4 SHA1 4204cfe137827798d2cef86fc677e40c629d9a55 SHA256 14ddac375d2d57ad1a4198c4776586a1396b5a18bf82301fd529ecd90948a1e1
-MISC ChangeLog 49291 RMD160 fc0fe2e31856d53d9c5eaecc16f604b793daa2b9 SHA1 a96fb126b45ef674e34ae87ea8f00715e8dd3be7 SHA256 1a3904d810a26383e5221a17fdd2cfebe26bc58d23733cc69108329eac0aaf47
+EBUILD linux-headers-2.6.30.ebuild 1429 RMD160 0910f3327a1133717b8aedac276b13e312f11fcf SHA1 38f4e49df42a32894cf66c5db0bd2fd7fd02df8c SHA256 80a3d4436bb4f7ab443e500c3c2c5948053e08ddaad214dd0a3d9dd02c162162
+MISC ChangeLog 49427 RMD160 dcaa65ca7e3becfdba6ab16168871b924c4f5bc6 SHA1 580e65182e4fc757b28995b238ad7b9678ea3c1a SHA256 612af58aca93207d38e8e22e57527c435fc00d4d71f6e8d9394a4713211bfb63
 MISC metadata.xml 162 RMD160 d002486a43522f2116b1d9d59828c484956d66e2 SHA1 d6b4923897f6ae673b4f93646f5b4ba61d5a2c3c SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.12 (GNU/Linux)
 
-iEYEARECAAYFAkoSXmYACgkQn/5bYzqsSmEyUQCfQk8QTchx/31880ypmEJ+uuS6
-s74AoJ2ElaMogcCK836XOOZeedC/Qw0L
-=tcsj
+iEYEARECAAYFAkpRfDMACgkQlPl3HsVfCDpHqQCfSlykdAHj/Ww0voMsJuVUjR66
+cx4AnAnyTEbQL9RgyQtorSAYoyl2u9sz
+=3010
 -----END PGP SIGNATURE-----
