@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/linux-headers
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/linux-headers/ChangeLog,v 1.288 2009/05/19 07:23:12 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/linux-headers/ChangeLog,v 1.289 2009/07/06 04:23:08 vapier Exp $
+
+*linux-headers-2.6.30 (06 Jul 2009)
+
+  06 Jul 2009; Mike Frysinger <vapier@gentoo.org>
+  +linux-headers-2.6.30.ebuild:
+  Version bump.
 
   19 May 2009; Mike Frysinger <vapier@gentoo.org>
   linux-headers-2.6.27-r2.ebuild, linux-headers-2.6.28-r1.ebuild:
